labs/day3/solutions/Lab2/12factor/k8s/frontend-virtualservice.yaml
# filepath: .../Day3/Solutions/Lab2/12factor/k8s/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: frontend
        port:
          number: 3000
